# outbox-python

./: .gitignore  .release-please-manifest.json  CLAUDE.md  README.md  buf.gen.yaml  lefthook.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-notes.yml  release.yml
examples/eventbridge/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/googlepubsub/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/hatchet/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/inngest/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/kafka/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/lambda/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/nats/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/restate/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/sns/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/sqs/: .env.example  anthropic.py  gemini.py  langchain.py  openai.py  pyproject.toml  xai.py
examples/temporal/: pyproject.toml
examples/temporal/anthropic/: .env.example  activity.py  worker.py
examples/temporal/gemini/: .env.example  activity.py  worker.py
examples/temporal/langchain/: activity.py  worker.py  workflow.py
examples/temporal/openai/: .env.example  activity.py  worker.py
examples/temporal/xai/: .env.example  activity.py  worker.py
(+7 files in other folders)
