[project]
name = "outbox-examples-temporal"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "outbox-sdk",
    "anthropic>=0.84.0",
    "google-genai>=1.65.0",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "openai>=2.24.0",
    "temporalio>=1.23.0",
]

[tool.uv]
package = false

[tool.uv.sources]
outbox-sdk = { workspace = true }

[dependency-groups]
dev = ["poethepoet"]

[tool.poe.tasks]
"start:anthropic" = { cmd = "python anthropic/worker.py", envfile = "anthropic/.env" }
"start:gemini" = { cmd = "python gemini/worker.py", envfile = "gemini/.env" }
"start:langchain" = { cmd = "python langchain/worker.py", envfile = "langchain/.env" }
"start:openai" = { cmd = "python openai/worker.py", envfile = "openai/.env" }
"start:xai" = { cmd = "python xai/worker.py", envfile = "xai/.env" }
